--- a/pwa-shell/src/styles/notifications-header.scss
+++ b/pwa-shell/src/styles/notifications-header.scss
@@ -1,7 +1,7 @@
 .NotificationsHeader {
   padding-top: 1rem;
   background-color: $color-secondary-lightest;
-  border-bottom: 1px solid $color-primary-light;
+  border-bottom: 1px solid $color-primary-lightest;
 
   &__title {
     font-weight: 600;
