--- a/pwa-shell/src/styles/notifications.scss
+++ b/pwa-shell/src/styles/notifications.scss
@@ -4,7 +4,7 @@
 
     &__body {
       img {
-        margin-top: 15vh;
+        margin-top: 23vh;
       }
     }
   }
