--- a/pwa-shell/src/styles/selected-category-list.scss
+++ b/pwa-shell/src/styles/selected-category-list.scss
@@ -1,4 +1,4 @@
-.CategoryList {
+.SelectedCategoryList {
   background: $color-secondary-lightest;
   padding: 15px 15px 30px 15px;
 
